--- a/about.html
+++ b/about.html
@@ -2,27 +2,34 @@
 <html lang="en">
 <head>
     <meta charset='utf-8'>
+<link rel='stylesheet' href='colors.css'>
 <title>Rohan Ravula</title>
 </head>
 <body>
-<h1>Rohan Ravula</h1>
+<header>Rohan Ravula</header>
 <nav>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="school.html">School</a></li>
+    <a href="index.html">Home</a>
+    <br>
+    <a href="about.html">About</a>
+    <br>
+    <a href="school.html">School</a>
 </nav>
-<title>About</title>
+<section>
 <h2>Education Goals</h2>
-    <li> Receive acceptance into a good college.</li>
-    <li> Achieve a graduate degree in engineering.</li>
-    <li> Start the P.H.D proccess for Aerospace engineering</li>
-
-<h2>Skills</h2>
-    <li>I know how to play basketball.</li>
-    <li>I know a lot of facts about space.</li>
-    <li>I am very cooperative and ready to work with others.</li>
+<ul>
+<li> Receive acceptance into a good college.</li>
+<li> Achieve a graduate degree in engineering.</li>
+<li> Start the P.H.D proccess for Aerospace engineering</li>
+</ul>
+<h3>Skills</h3>
+<ul>
+<li>I know how to play basketball.</li>
+<li>I know a lot of facts about space.</li>
+<li>I am very cooperative and ready to work with others.</li>
+</ul>
+</section>
 <br>
-<footer> Last updated on July 2nd <br>
-    <a href="mailto:rohank.ravula@gmail.com">Contact Me</a></footer>
+<footer> Last updated on July 3rd <br>
+    <a href="mailto:rohank.ravula@gmail.com">Email Me</a></footer>
 </body>
 </html>
