--- a/school.html
+++ b/school.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head2>
     <meta charset='utf-8'>
+<link rel='stylesheet' href='colors.css'>
 <title>Rohan Ravula</title>
-</head>
+</head2>
 <body>
-<h1>Rohan Ravula</h1>
+<header>Rohan Ravula</header>
 <nav>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="school.html">School</a></li>
+    <a href="index.html">Home</a>
+    <br>
+    <a href="about.html">About</a>
+    <br>
+    <a href="school.html">School</a>
 </nav>
-<title>School</title>
-<h1>My School</h1>
-<p>I am a rising sophmore who goes to Gretchen Whitney High School in Cerritos, California. Our school's mascot are the Wildcats.</p>
+<section>
+<h2>My School</h2>
+<p>I am a rising sophomore who goes to Gretchen Whitney High School in Cerritos, California. Our school's mascot are the Wildcats.</p>
+</section>
 <br>
-<footer> Last updated on July 2nd <br>
+<footer> Last updated on July 3rd <br>
     <a href="mailto:rohank.ravula@gmail.com">Contact Me</a></footer>
 </body>
 </html>
