--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
 </head>
 <body>
 <header>Rohan Ravula</header>
-<nav>
-    <a href="index.html">Home</a>
-    <br>
-    <a href="about.html">About</a>
-    <br>
-    <a href="school.html">School</a>
+<nav><ul class='navigation'>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="school.html">School</a></li>
+    </ul>
 </nav>
 <section> 
+<div class="column">
 <h2> About Me</h2>    
 <p>My name is Rohan Ravula and I am a high school student in Cerritos. I am a rising sophmore and I am excited to learn more about technology. I live with my Mom, Dad, Grandmother, my Aunt, and a younger sibling so I'm always doing something. One of the things you should know about me is that I love to learn and am always open to new things. I am redy to take on the challenge of learning HTML and CSS and am excited for what it is going to bring!</p>
-    
-<h3>When I Have Free Time</h3>
+</div>
 
+<div class="freetime">
+<h3>When I Have Free Time</h3>
 <ol>
     <li>I like to read books(my favorite is Ender's Game).</li>
     <li>I like to play basketball or go to the park and shoot around with my friends.</li>
     <li>I enjoy going to the movies, the most recent one I went to was the new Spider-Man.</li>
     </ol>
     <p>My favorite website is <a href="https://lichess.org/">Lichess</a> because I love playing chess.</p>
+</div>
 </section>      
 
-<footer> Last updated on July 3rd 
+<footer> Last updated on July 8th 
 <br>
 <a href="mailto:rohank.ravula@gmail.com">Contact Me</a>
  </footer>
 </body>
 </html>
+
+
