--- a/school.html
+++ b/school.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head2>
     <meta charset='utf-8'>
 <link rel='stylesheet' href='colors.css'>
 <title>Rohan Ravula</title>
-</head2>
+
 <body>
 <header>Rohan Ravula</header>
-<nav>
-    <a href="index.html">Home</a>
-    <br>
-    <a href="about.html">About</a>
-    <br>
-    <a href="school.html">School</a>
+<nav><ul class='navigation'>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="school.html">School</a></li>
+    </ul>
 </nav>
+
 <section>
 <h2>My School</h2>
 <p>I am a rising sophomore who goes to Gretchen Whitney High School in Cerritos, California. Our school's mascot are the Wildcats.</p>
 </section>
 <br>
-<footer> Last updated on July 3rd <br>
+<footer> Last updated on July 8th <br>
     <a href="mailto:rohank.ravula@gmail.com">Contact Me</a></footer>
 </body>
 </html>
