--- a/about.html
+++ b/about.html
@@ -7,29 +7,36 @@
 </head>
 <body>
 <header>Rohan Ravula</header>
-<nav>
-    <a href="index.html">Home</a>
-    <br>
-    <a href="about.html">About</a>
-    <br>
-    <a href="school.html">School</a>
+<nav><ul class='navigation'>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="school.html">School</a></li>
+    </ul>
 </nav>
-<section>
+
+<div class="page2">
 <h2>Education Goals</h2>
-<ul>
+<ol>
 <li> Receive acceptance into a good college.</li>
 <li> Achieve a graduate degree in engineering.</li>
-<li> Start the P.H.D proccess for Aerospace engineering</li>
-</ul>
+<li> Start the Ph.D process for Aerospace engineering</li>
+</ol>
+    
 <h3>Skills</h3>
-<ul>
+<ol>
 <li>I know how to play basketball.</li>
 <li>I know a lot of facts about space.</li>
 <li>I am very cooperative and ready to work with others.</li>
-</ul>
-</section>
+</ol>
+</div>
 <br>
-<footer> Last updated on July 3rd <br>
+    
+<img class="picture" src="https://www.choicehotels.com/cms/images/choice-hotels/explore/hero-famous-basketball-courts/hero-famous-basketball-courts.jpg" 
+     alt="alternatetext" style="width:692px">
+
+<footer> Last updated on July 8th <br>
     <a href="mailto:rohank.ravula@gmail.com">Email Me</a></footer>
 </body>
+
+
 </html>
