--- a/school.html
+++ b/school.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
     <meta charset='utf-8'>
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
 <link rel='stylesheet' href='colors.css'>
 <title>Rohan Ravula</title>
 
